# Image-Filtering-Application

./: .gitignore  CMakeLists.txt  README.md  build.sh
include/: imageprocessor.h  mainwindow.h
include/filters/: convolutionfilters.h  functionfilters.h
resources/: mainwindow.ui
src/: imageprocessor.cpp  main.cpp  mainwindow.cpp
src/filters/: convolutionfilters.cpp  functionfilters.cpp
